[build-system]
build-backend = 'trampolim'
requires = ['trampolim']

[project]
name = 'metadata'
version = '0.0.0'
description = 'Python package to extract the metadata from Python packages'
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
keywords = ['metadata', 'pep621', 'pep517', 'packaging']
authors = [
  { name = 'Filipe Laíns', email = 'lains@riseup.net' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
]

dependencies = [
  'build>=0.7.0',
  'pep517>=0.2.0',
  'importlib-metadata>=0.22; python_version < "3.8"',
  'backports.cached_property>=1.0.0; python_version < "3.8"',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
]
docs = [
  'furo>=2021.04.11b34',
  'sphinx~=3.0',
]

[project.urls]
homepage = 'https://github.com/FFY00/python-iomux'
repository = 'https://github.com/FFY00/python-iomux'
documentation = 'https://iomux.readthedocs.io'
changelog = 'https://iomux.readthedocs.io/en/latest/changelog.html'
